--- a/osx/.config/alacritty/alacritty.toml
+++ b/osx/.config/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+# themes
 # import = ["~/.config/alacritty/themes/themes/palenight.toml"]
 # import = ["~/.config/alacritty/themes/themes/moonlight_ii_vscode.toml"]
 # import = ["~/.config/alacritty/themes/themes/nightfox.toml"]
