--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -1,56 +1,24 @@
-# Fix Colors
-set-option -a terminal-overrides ",alacritty-direct:RGB"
+set -g default-terminal "alacritty"
+
+# tmux prefix
+set -g prefix C-Space
+set -g prefix2 None
+
+# vi copy/paste mode
+set-window-option -g mode-keys vi
 
 set-option -g status-position bottom
-set -g activity-action other
-set -g assume-paste-time 1
-set -g base-index 0
-# set -g bell-action any
-set -g default-command ''
 set -g default-shell /bin/zsh
-set -g default-size 80x24
-set -g destroy-unattached off
-set -g detach-on-destroy on
+
+# pane indicator
 set -g display-panes-active-colour yellow
-set -g display-panes-colour blue
+set -g display-panes-colour magenta
 set -g display-panes-time 1000
-set -g display-time 750
+
 set -g history-limit 2048
-set -g key-table root
-set -g lock-after-time 0
-set -g lock-command "lock -np"
-set -g message-command-style bg=black,fg=yellow
-set -g message-style bg=yellow,fg=black
-set -g mouse off
-set -g prefix C-b
-set -g prefix2 None
-set -g renumber-windows off
+set -g renumber-windows on
 set -g repeat-time 500
-set -g set-titles off
-set -g set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
-set -g silence-action other
-
-
-# set -g status on
-# set -g status-bg default
-# set -g status-fg default
-# set -g status-format[0] "#[align=left range=left #{E:status-left-style}]#[push-default]#{T;=/#{status-left-length}:status-left}#[pop-default]#[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{E:window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}}, #{E:window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{E:window-status-activity-style},default}}, #{E:window-status-activity-style},}}]#[push-default]#{T:window-status-format}#[pop-default]#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{E:window-status-current-style},default},#{E:window-status-current-style},#{E:window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}}, #{E:window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{E:window-status-activity-style},default}}, #{E:window-status-activity-style},}}]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{E:status-right-style}]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]"
-# set -g status-format[1] "#[align=centre]#{P:#{?pane_active,#[reverse],}#{pane_index}[#{pane_width}x#{pane_height}]#[default] }"
-# set -g status-justify left
-# set -g status-keys emacs
-# set -g status-left "[#{session_name}] "
-# set -g status-left-length 10
-# set -g status-left-style default
-# set -g status-position bottom
-# # set -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} #(gitmux #{pane_current_path})\"#{=21:pane_title}\" %H:%M %d-%b-%y"
-# # set -g status-right "#(gitmux #{pane_current_path})\"#{=21:pane_title}\" %H:%M%d-%b-%y"
-# # set -g status-right "\"#{=21:pane_title}\" %H:%M%d-%b-%y"
-# set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) "#{=21:pane_title}" %H:%M %d-%b-%y'
-
-# set -g status-right-length 40
-# set -g status-right-style default
-# set -g status-style bg=green,fg=black
-
+# set -g set-titles off
 
 set -g update-environment[0] DISPLAY
 set -g update-environment[1] KRB5CCNAME
@@ -68,24 +36,26 @@ set -g word-separators "!\"#$%&'()*+,-./:;<=>?@[\\]^`{|}~"
 # nord theme
 # run-shell "~/.config/tmux/themes/nord-tmux/nord.tmux"
 
-######################
-### DESIGN CHANGES ###
-######################
-# https://github.com/janoamaral/tokyo-night-tmux
+# >>> ---- Design Change -----
 
+# title
+set -g set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
 
-#+--- Bars LEFT ---+
+set -g message-command-style bg=black,fg=yellow
+set -g message-style bg=yellow,fg=black
+
+# bar left
 # Session name
 # set -g status-left "#[fg=black,bg=cyan] #S #[fg=blue,bg=default,nobold,noitalics,nounderscore]"
 set -g status-left '#[fg=black,bg=magenta]#{?client_prefix,,  tmux  }#[fg=black,bg=yellow]#{?client_prefix,  tmux  ,}'
-#+--- Windows ---+
-# Focus
-set -g window-status-current-format "#[fg=black,bg=brightblue]  #I #W #{?window_last_flag,,}  "
-# Unfocused
-set -g window-status-format "#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]  #I #W #F  "
 
+# bar right
+# focus
+set -g window-status-current-format "#[fg=magenta,bg=black]  #I #W #{?window_last_flag,,}\uf111  "
+# unfocused
+set -g window-status-format "#[fg=white,bg=black,nobold,noitalics,nounderscore]  #I #W #{?window_last_flag,-,\uf1db}  "
 
-#+--- Panes ---+
+# panes
 set -g pane-border-style "fg=black"
 set -g pane-active-border-style "fg=yellow"
 
@@ -93,9 +63,10 @@ set -g pane-active-border-style "fg=yellow"
 # set -g status-bg "#1a1b26"
 set -g status-bg black
 
-#+--- Bars RIGHT ---+
+# right most
 # set -g status-right "#[fg=white,bg=#24283B]  %Y-%m-%d #[]❬ %H:%M"
-set -g status-right "#[fg=black,bg=magenta]  #S  "
 set -g window-status-separator ""
+set -g status-right "#[fg=magenta,bg=black] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=magenta,bg=black]  \uf4a9 #H  #[fg=black,bg=magenta]  #S  "
 
 
+# <<< ---- Design Change ----
