--- a/osx/.config/alacritty/alacritty.toml
+++ b/osx/.config/alacritty/alacritty.toml
@@ -7,9 +7,11 @@
 import = ["~/.config/alacritty/themes/themes/ayu_mirage.toml"]
 
 [cursor]
-style = { shape = "Block", blinking = "On" }
+style = { shape = "Beam", blinking = "On" }
+vi_mode_style = { shape = "Block", blinking = "On" }
 blink_interval = 500
 blink_timeout = 0
+thickness = 0.35
 
 
 [colors]
@@ -66,11 +68,11 @@ multiplier = 3
 
 [window]
 # blur = true
-decorations = "Transparent"
+decorations = "Full"
 dynamic_title = true
 # opacity = 1
 option_as_alt = "OnlyLeft"
 title = "Alacritty"
-padding = { x = 16, y = 26 }
+# padding = { x = 16, y = 26 }
 # padding = { x = 16, y = 16 }
-# padding = { x = 8, y = 0 }
+padding = { x = 8, y = 0 }
