--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "alacritty"
+set -ag terminal-overrides ",$TERM:RGB"
 
 # tmux prefix
 set -g prefix C-Space
@@ -51,9 +52,9 @@ set -g status-left '#[fg=black,bg=magenta]#{?client_prefix,,  tmux  }#[fg=black,
 
 # bar right
 # focus
-set -g window-status-current-format "#[fg=magenta,bg=black]  #I #W #{?window_last_flag,,}\uf111  "
+set -g window-status-current-format "#[fg=magenta,bg=black]  #I:#W#{?window_last_flag,,}*"
 # unfocused
-set -g window-status-format "#[fg=white,bg=black,nobold,noitalics,nounderscore]  #I #W #{?window_last_flag,-,\uf1db}  "
+set -g window-status-format "#[fg=white,bg=black,nobold,noitalics,nounderscore]  #I:#W#{?window_last_flag,-,}"
 
 # panes
 set -g pane-border-style "fg=black"
