tmux: update color

--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -13,7 +13,7 @@ set -g default-shell /bin/zsh
 
 # pane indicator
 set -g display-panes-active-colour yellow
-set -g display-panes-colour magenta
+set -g display-panes-colour blue
 set -g display-panes-time 1000
 
 set -g renumber-windows on
@@ -47,11 +47,11 @@ set -g message-style bg=yellow,fg=black
 # bar left
 # Session name
 # set -g status-left "#[fg=black,bg=cyan] #S #[fg=blue,bg=default,nobold,noitalics,nounderscore]"
-set -g status-left '#[fg=black,bg=magenta]#{?client_prefix,,  tmux  }#[fg=black,bg=yellow]#{?client_prefix,  tmux  ,}'
+set -g status-left '#[fg=black,bg=blue]#{?client_prefix,,  tmux  }#[fg=black,bg=yellow]#{?client_prefix,  tmux  ,}'
 
 # bar right
 # focus
-set -g window-status-current-format "#[fg=magenta,bg=black]  #I:#W#{?window_last_flag,,}*"
+set -g window-status-current-format "#[fg=blue,bg=black]  #I:#W#{?window_last_flag,,}*"
 # unfocused
 set -g window-status-format "#[fg=white,bg=black,nobold,noitalics,nounderscore]  #I:#W#{?window_last_flag,-,}"
 
@@ -66,7 +66,6 @@ set -g status-bg black
 # right most
 # set -g status-right "#[fg=white,bg=#24283B]  %Y-%m-%d #[]❬ %H:%M"
 set -g window-status-separator ""
-set -g status-right "#[fg=magenta,bg=black] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=magenta,bg=black]  \uf4a9 #H  #[fg=black,bg=magenta]  #S  "
-
+set -g status-right "#[fg=blue,bg=black] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=blue,bg=black]  \uf4a9 #H  #[fg=black,bg=blue]  #S  "
 
 # <<< ---- Design Change ----
