--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -4,6 +4,11 @@ set -ag terminal-overrides ",$TERM:RGB"
 # tmux prefix
 set -g prefix C-Space
 set -g prefix2 None
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
 
 # vi copy/paste mode
 set-window-option -g mode-keys vi
