--- a/osx/.config/alacritty/alacritty.toml
+++ b/osx/.config/alacritty/alacritty.toml
@@ -4,7 +4,8 @@
 # import = ["~/.config/alacritty/themes/themes/nightfox.toml"]
 # import = ["~/.config/alacritty/themes/themes/tokyo-night.toml"]
 # import = ["~/.config/alacritty/themes/themes/moonlight_kc.toml"]
-import = ["~/.config/alacritty/themes/themes/ayu_mirage.toml"]
+# import = ["~/.config/alacritty/themes/themes/ayu_mirage.toml"]
+import = ["~/.config/alacritty/themes/themes/catppuccin.toml"]
 
 [cursor]
 style = { shape = "Beam", blinking = "On" }
@@ -12,7 +13,6 @@ vi_mode_style = { shape = "Block", blinking = "On" }
 blink_interval = 500
 blink_timeout = 0
 thickness = 0.35
-
 
 [colors]
 draw_bold_text_with_bright_colors = true
@@ -22,19 +22,10 @@ cursor = "CellForeground"
 text = "CellBackground"
 
 [font]
-size = 13
-
-[font.bold]
-style = "Bold"
-
-[font.bold_italic]
-style = "Bold Italic"
-
-[font.italic]
-style = "Italic"
+size = 14
 
 [font.normal]
-family = "MesloLGS NF"
+family = "MesloLGMDZ Nerd Font Mono"
 style = "Regular"
 
 [font.offset]
