--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,23 +2,23 @@
     "Lua.runtime.version": "LuaJIT",
     "Lua.diagnostics.globals": ["vim"],
     "Lua.workspace.library": [
-        "/Users/flap/.vscode/extensions/asvetliakov.vscode-neovim-1.14.1/runtime/lua",
-        // "/Users/flap/.vscode/extensions/asvetliakov.vscode-neovim-1.14.1/runtime/vscode-neovim.vim",
+        "/Users/flap/.vscode/extensions/asvetliakov.vscode-neovim-1.15.2/runtime/lua",
         "/Users/flap/.config/nvim",
         "/Users/flap/.local/share/nvim/lazy/neodev.nvim",
         "/opt/homebrew/Cellar/neovim/0.9.5/share/nvim/runtime",
         "/opt/homebrew/Cellar/neovim/0.9.5/share/nvim/runtime/pack/dist/opt/matchit",
-        "/opt/homebrew/Cellar/neovim/0.9.5/lib/nvim",
+        "/opt/homebrew/Cellar/neovim/0.9.5/lib/nvim"
         // "/Users/flap/.local/state/nvim/lazy/readme",
         // "/Users/flap/.local/share/nvim/lazy/cmp-nvim-lsp/after",
-        // "/Users/flap/.vscode/extensions/asvetliakov.vscode-neovim-1.14.1/runtime/lua",
-        // "/Users/flap/.vscode/extensions/asvetliakov.vscode-neovim-1.14.1/runtime/vscode"
     ],
+    "editor.semanticHighlighting.enabled": true,
+    "[lua]": {
         "editor.quickSuggestions": {
             "comments": "inline",
             "other": "on",
             "strings": "on"
         },
-        "editor.semanticHighlighting.enabled": true
+        "editor.semanticHighlighting.enabled": true,
+        "editor.defaultFormatter": "lixvbnet.styluafork"
     }
 }
