--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -10,6 +10,8 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+set -g mouse
+
 # vi copy/paste mode
 set-window-option -g mode-keys vi
 
