tmux: format style

--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -43,7 +43,9 @@ set -g word-separators "!\"#$%&'()*+,-./:;<=>?@[\\]^`{|}~"
 # nord theme
 # run-shell "~/.config/tmux/themes/nord-tmux/nord.tmux"
 
-# >>> ---- Design Change -----
+# -------------
+# Design Change
+# -------------
 
 # title
 set -g set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
@@ -74,5 +76,3 @@ set -g status-bg black
 # set -g status-right "#[fg=white,bg=#24283B]  %Y-%m-%d #[]❬ %H:%M"
 set -g window-status-separator ""
 set -g status-right "#[fg=blue,bg=black] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=blue,bg=black]  \uf4a9 #H  #[fg=black,bg=blue]  #S  "
-
-# <<< ---- Design Change ----
