vscode: accommodate editing yabai

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "files.associations": {
+        "*rc": "shellscript"
+    },
     "Lua.runtime.version": "LuaJIT",
     "Lua.diagnostics.globals": ["vim"],
     "Lua.workspace.library": [
