tmux: add history limit

--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -12,6 +12,8 @@ bind -r l select-pane -R
 
 set -g mouse
 
+set -g history-limit 10000
+
 # vi copy/paste mode
 set-window-option -g mode-keys vi
 
