--- a/osx/.fullnop10kzshrc
+++ b/osx/.fullnop10kzshrc
@@ -3,9 +3,6 @@
 # ZSH_PECO_HISTORY_DEDUP=1
 
 # ---- Flap setting ----
-path=("$HOME/.local/bin" $PATH)
-export PATH
-
 # unset ZSH_AUTOSUGGEST_USE_ASYNC
 # disable beeb before tab suggestion
 unsetopt LIST_BEEP 
@@ -26,18 +23,13 @@ export LESS="--incsearch --ignore-case --HILITE-UNREAD --status-column --LONG-PR
 #         source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
 # fi
 
-# nvm
-# manually add from brew caveat
-# export NVM_DIR="$HOME/.nvm"
-#         [ -s "/opt/homebrew/opt/nvm/nvm.sh" ] && \. "/opt/homebrew/opt/nvm/nvm.sh"  # This loads nvm
-#         [ -s "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm" ] && \. "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm"  # This loads nvm bash_completion
-
-# nvm lazy load
+# Manually add from brew caveat
 export NVM_DIR="$HOME/.nvm"
-        [ -s "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm" ] && \. "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm" # This loads nvm bash_completion
-export PATH="$NVM_DIR/versions/node/v$(<$NVM_DIR/alias/default)/bin:$PATH"
-# alias `nvm` to this one liner lazy load of the normal nvm script
-alias nvm="unalias nvm; [ -s "/opt/homebrew/opt/nvm/nvm.sh" ] && \. "/opt/homebrew/opt/nvm/nvm.sh"; nvm $@"
+        [ -s "/opt/homebrew/opt/nvm/nvm.sh" ] && \. "/opt/homebrew/opt/nvm/nvm.sh"  # This loads nvm
+        [ -s "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm" ] && \. "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm"  # This loads nvm bash_completion
+
+# If you come from bash you might have to change your $PATH.
+# export PATH=$HOME/bin:/usr/local/bin:$PATH
 
 # Path to your oh-my-zsh installation.
 export ZSH="$HOME/.oh-my-zsh"
@@ -46,7 +38,7 @@ export ZSH="$HOME/.oh-my-zsh"
 # load a random theme each time oh-my-zsh is loaded, in which case,
 # to know which specific one was loaded, run: echo $RANDOM_THEME
 # See https://github.com/ohmyzsh/ohmyzsh/wiki/Themes
-ZSH_THEME="lukerandall"
+# ZSH_THEME="lukerandall"
 # ZSH_THEME="powerlevel10k/powerlevel10k"
 
 # Set list of themes to pick from when loading at random
@@ -110,7 +102,7 @@ ZSH_THEME="lukerandall"
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
 # plugins=(git fzf zsh-autosuggestions zsh-syntax-highlighting)
-plugins=(fzf zsh-autosuggestions fast-syntax-highlighting colored-man-pages)
+plugins=(git fzf zsh-autosuggestions fast-syntax-highlighting)
 
 source $ZSH/oh-my-zsh.sh
 
@@ -162,17 +154,13 @@ _fzf_comprun() {
 
 # Flap Personal ALIASES
 # ALIASES
-
 alias cdsrc="cd ~/Source"
-alias cdmin="cd ~/Minervia"
+alias cdgrf="cd ~/Graffity"
 
-# conda
 alias act="conda activate"
 
-# ls using eza
-# alias ls="eza --oneline --icons=auto --color=auto"
+alias ls="eza --oneline --git --icons=auto --color=auto"
 
-# less with syntax highlight
 LESSPIPE=`which src-hilite-lesspipe.sh`
 alias lessh='LESSOPEN="| ${LESSPIPE} %s" less -r'
 
@@ -180,7 +168,6 @@ alias lessh='LESSOPEN="| ${LESSPIPE} %s" less -r'
 alias ggp="git push"
 alias gga="git add"
 alias ggc="git commit -m"
-alias wta="python ~/Source/work-timer/python/main.py"
 
 ggac () {
         if [ "$#" -eq 2 ] || [ -d "$1" ]; then
@@ -194,79 +181,42 @@ ggac () {
         fi
 }
 
-# cd + ls
+# SRC PROGRAM ALIASES
+alias wta="python ~/Source/work-timer/python/main.py"
+
+# FUNCTION ALIASES
 cds () {
         cd $1
         ls
 }
 
-# man page using fzf
 fman () {
         man $1 | col -bx | fzf
 }
-
-# fzf on file content
 fcat () {
         cat $1 | fzf
 }
 
-# >>> ---- lazy load conda ----
-# https://www.reddit.com/r/zsh/comments/qmd25q/lazy_loading_conda/
-# Add any commands which depend on conda here
-lazy_conda_aliases=('python' 'conda')
-
-load_conda() {
-  for lazy_conda_alias in $lazy_conda_aliases
-  do
-    unalias $lazy_conda_alias
-  done
-
-  __conda_prefix="$HOME/miniconda3" # Set your conda Location
-
-  # >>> conda initialize >>>
-  __conda_setup="$("$__conda_prefix/bin/conda" 'shell.bash' 'hook' 2> /dev/null)"
-  if [ $? -eq 0 ]; then
-      eval "$__conda_setup"
-  else
-      if [ -f "$__conda_prefix/etc/profile.d/conda.sh" ]; then
-          . "$__conda_prefix/etc/profile.d/conda.sh"
-      else
-          export PATH="$__conda_prefix/bin:$PATH"
-      fi
-  fi
-  unset __conda_setup
-  # <<< conda initialize <<<
-
-  unset __conda_prefix
-  unfunction load_conda
-}
-
-for lazy_conda_alias in $lazy_conda_aliases
-do
-  alias $lazy_conda_alias="load_conda && $lazy_conda_alias"
-done
-# <<< ---- lazy load conda ----
-
-# old conda load
-# # >>> conda initialize >>>
-# # !! Contents within this block are managed by 'conda init' !!
-# __conda_setup="$('/Users/flap/miniconda3/bin/conda' 'shell.zsh' 'hook' 2> /dev/null)"
-# if [ $? -eq 0 ]; then
-#         eval "$__conda_setup"
-# else
-#         if [ -f "/Users/flap/miniconda3/etc/profile.d/conda.sh" ]; then
-#                 . "/Users/flap/miniconda3/etc/profile.d/conda.sh"
-#         else
-#                 export PATH="/Users/flap/miniconda3/bin:$PATH"
-#         fi
-# fi
-# unset __conda_setup
-# # <<< conda initialize <<<
+# >>> conda initialize >>>
+# !! Contents within this block are managed by 'conda init' !!
+__conda_setup="$('/Users/flap/miniconda3/bin/conda' 'shell.zsh' 'hook' 2> /dev/null)"
+if [ $? -eq 0 ]; then
+        eval "$__conda_setup"
+else
+        if [ -f "/Users/flap/miniconda3/etc/profile.d/conda.sh" ]; then
+                . "/Users/flap/miniconda3/etc/profile.d/conda.sh"
+        else
+                export PATH="/Users/flap/miniconda3/bin:$PATH"
+        fi
+fi
+unset __conda_setup
+# <<< conda initialize <<<
 
 # FLAP post setting
-# export PF_ASCII="openbsd"
-# export PF_INFO="ascii title os host kernel uptime palette"
+export PF_ASCII="openbsd"
+export PF_INFO="ascii title os host kernel uptime palette"
 # pfetch
+# cat ~/.zshbanner
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 # [[ ! -f ~/.config/p10k/.p10k.zsh ]] || source ~/.config/p10k/.p10k.zsh
@@ -278,11 +228,3 @@ eval "$(zoxide init zsh)"
 # ---- Bat ----
 
 export BAT_THEME=ansi
-
-# pnpm
-export PNPM_HOME="/Users/flap/Library/pnpm"
-case ":$PATH:" in
-  *":$PNPM_HOME:"*) ;;
-  *) export PATH="$PNPM_HOME:$PATH" ;;
-esac
-# pnpm end
