--- a/osx/.config/alacritty/alacritty.toml
+++ b/osx/.config/alacritty/alacritty.toml
@@ -1,11 +1,3 @@
-# themes
-# import = ["~/.config/alacritty/themes/themes/palenight.toml"]
-# import = ["~/.config/alacritty/themes/themes/moonlight_ii_vscode.toml"]
-# import = ["~/.config/alacritty/themes/themes/nightfox.toml"]
-# import = ["~/.config/alacritty/themes/themes/tokyo-night.toml"]
-# import = ["~/.config/alacritty/themes/themes/moonlight_kc.toml"]
-# import = ["~/.config/alacritty/themes/themes/ayu_mirage.toml"]
-import = ["~/.config/alacritty/themes/themes/catppuccin.toml"]
 
 [cursor]
 style = { shape = "Beam", blinking = "On" }
@@ -67,3 +59,13 @@ title = "Alacritty"
 # padding = { x = 16, y = 26 }
 # padding = { x = 16, y = 16 }
 padding = { x = 8, y = 0 }
+
+[general]
+# themes
+# import = ["~/.config/alacritty/themes/themes/palenight.toml"]
+# import = ["~/.config/alacritty/themes/themes/moonlight_ii_vscode.toml"]
+# import = ["~/.config/alacritty/themes/themes/nightfox.toml"]
+# import = ["~/.config/alacritty/themes/themes/tokyo-night.toml"]
+# import = ["~/.config/alacritty/themes/themes/moonlight_kc.toml"]
+# import = ["~/.config/alacritty/themes/themes/ayu_mirage.toml"]
+import = ["~/.config/alacritty/themes/themes/catppuccin.toml"]
