--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -13,6 +13,8 @@ bind -r l select-pane -R
 set -g mouse
 
 set -g history-limit 10000
+# nvim slow on switch i to n
+set -sg escape-time 10
 
 # vi copy/paste mode
 set-window-option -g mode-keys vi
