--- a/osx/.config/alacritty/alacritty.toml
+++ b/osx/.config/alacritty/alacritty.toml
@@ -1,3 +1,7 @@
+# [terminal.shell]
+# program = "/bin/zsh"
+# args = ["--no-rcs"]
+
 
 [cursor]
 style = { shape = "Beam", blinking = "On" }
@@ -53,7 +57,7 @@ multiplier = 3
 blur = true
 decorations = "Full"
 dynamic_title = true
-opacity = 0.65
+opacity = 0.85
 option_as_alt = "OnlyLeft"
 title = "Alacritty"
 # padding = { x = 16, y = 26 }
