--- a/osx/.config/aerospace/aerospace.toml
+++ b/osx/.config/aerospace/aerospace.toml
@@ -38,6 +38,16 @@ on-focus-changed = 'move-mouse window-lazy-center'
 # Useful if you don't use this macOS feature, but accidentally hit cmd-h or cmd-alt-h key
 automatically-unhide-macos-hidden-apps = false
 
+[workspace-to-monitor-force-assignment]
+1 = 'secondary'
+2 = 'secondary'
+3 = 'secondary'
+4 = 'secondary'
+5 = 'main'
+6 = 'main'
+7 = 'main'
+8 = 'main'
+
 #
 # floating
 #
@@ -54,6 +64,10 @@ run = ['layout floating']
 if.app-id = 'com.apple.FaceTime'
 run = ['layout floating']
 
+[[on-window-detected]]
+if.window-title-regex-substring = '^Picture-In-Picture$'
+run = ['layout floating']
+
 #
 # window assignment
 #
@@ -64,27 +78,23 @@ run = ['move-node-to-workspace 1']
 
 [[on-window-detected]]
 if.app-name-regex-substring = '^(Notion|Obsidian|Siyuan)$'
-run = ['move-node-to-workspace 9']
+run = ['move-node-to-workspace 2']
 
 [[on-window-detected]]
 if.app-name-regex-substring = '^(Discord|Line)$'
-run = ['move-node-to-workspace 8']
+run = ['move-node-to-workspace 3']
 
 [[on-window-detected]]
 if.app-name-regex-substring = '^Code$'
-run = [ 'move-node-to-workspace 2']
+run = [ 'move-node-to-workspace 5']
 
 [[on-window-detected]]
 if.app-id = 'org.alacritty'
-run = [ 'move-node-to-workspace 3' ]
+run = [ 'move-node-to-workspace 6' ]
 
 [[on-window-detected]]
 if.app-name-regex-substring = '^(Finder)$'
-run = ['move-node-to-workspace 4']
-
-[[on-window-detected]]
-if.app-name-regex-substring = '^(Docker Desktop|Activity Monitor)$'
-run = ['move-node-to-workspace 5']
+run = ['move-node-to-workspace 7']
 
 [[on-window-detected]]
 run = [ 'move-node-to-workspace 10' ]
@@ -130,13 +140,7 @@ outer.right =      0
 # All possible commands: https://nikitabobko.github.io/AeroSpace/commands
 
 # You can uncomment the following lines to open up terminal with alt + enter shortcut (like in i3)
-# alt-enter = '''exec-and-forget osascript -e '
-# tell application "Terminal"
-#     do script
-#     activate
-# end tell'
-# '''
-alt-enter = 'exec-and-forget open /Applications/Alacritty.app'
+alt-shift-enter = 'exec-and-forget open /Applications/Alacritty.app'
 # alt-b = 'exec-and-forget open /Applications/Brave\ Browser.app'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
@@ -162,16 +166,16 @@ alt-shift-equal = 'resize smart +50'
 alt-shift-f = 'fullscreen --no-outer-gaps'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-alt-1 = ['move-workspace-to-monitor next --wrap-around', 'focus-monitor --wrap-around prev', 'summon-workspace 1', 'move-mouse monitor-lazy-center']
-alt-2 = ['move-workspace-to-monitor next --wrap-around', 'focus-monitor --wrap-around prev', 'summon-workspace 2', 'move-mouse monitor-lazy-center']
-alt-3 = ['move-workspace-to-monitor next --wrap-around', 'focus-monitor --wrap-around prev', 'summon-workspace 3', 'move-mouse monitor-lazy-center']
-alt-4 = ['move-workspace-to-monitor next --wrap-around', 'focus-monitor --wrap-around prev', 'summon-workspace 4', 'move-mouse monitor-lazy-center']
-alt-5 = ['move-workspace-to-monitor next --wrap-around', 'focus-monitor --wrap-around prev', 'summon-workspace 5', 'move-mouse monitor-lazy-center']
-alt-6 = ['move-workspace-to-monitor next --wrap-around', 'focus-monitor --wrap-around prev', 'summon-workspace 6', 'move-mouse monitor-lazy-center']
-alt-7 = ['move-workspace-to-monitor next --wrap-around', 'focus-monitor --wrap-around prev', 'summon-workspace 7', 'move-mouse monitor-lazy-center']
-alt-8 = ['move-workspace-to-monitor next --wrap-around', 'focus-monitor --wrap-around prev', 'summon-workspace 8', 'move-mouse monitor-lazy-center']
-alt-9 = ['move-workspace-to-monitor next --wrap-around', 'focus-monitor --wrap-around prev', 'summon-workspace 9', 'move-mouse monitor-lazy-center']
-alt-0 = ['move-workspace-to-monitor next --wrap-around', 'focus-monitor --wrap-around prev', 'summon-workspace 10', 'move-mouse monitor-lazy-center']
+alt-1 = 'workspace 1'
+alt-2 = 'workspace 2'
+alt-3 = 'workspace 3'
+alt-4 = 'workspace 4'
+alt-5 = 'workspace 5'
+alt-6 = 'workspace 6'
+alt-7 = 'workspace 7'
+alt-8 = 'workspace 8'
+alt-9 = 'summon-workspace 9'
+alt-0 = 'summon-workspace 10'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 alt-shift-1 = 'move-node-to-workspace --focus-follows-window 1'
@@ -186,7 +190,8 @@ alt-shift-9 = 'move-node-to-workspace --focus-follows-window 9'
 alt-shift-0 = 'move-node-to-workspace --focus-follows-window 10'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
-alt-tab = 'focus-monitor --wrap-around next'
+alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
+alt-tab = 'workspace-back-and-forth'
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
 # alt-rightSquareBracket = 'focus-monitor --wrap-around next'
 # alt-leftSquareBracket = 'focus-monitor --wrap-around prev'
