--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -54,29 +54,56 @@ set -g word-separators "!\"#$%&'()*+,-./:;<=>?@[\\]^`{|}~"
 # title
 set -g set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
 
-set -g message-command-style bg=black,fg=yellow
-set -g message-style bg=yellow,fg=black
+set -g message-command-style bg=color233,fg=yellow
+set -g message-style bg=yellow,fg=color233
 
+# --- dark theme
 # bar left
 # Session name
-# set -g status-left "#[fg=black,bg=cyan] #S #[fg=blue,bg=default,nobold,noitalics,nounderscore]"
-set -g status-left '#[fg=black,bg=blue]#{?client_prefix,,  tmux  }#[fg=black,bg=yellow]#{?client_prefix,  tmux  ,}'
+# set -g status-left "#[fg=color233,bg=cyan] #S #[fg=blue,bg=default,nobold,noitalics,nounderscore]"
+set -g status-left '#[fg=color233,bg=blue]#{?client_prefix,,  tmux  }#[fg=black,bg=yellow]#{?client_prefix,  tmux  ,}'
+
 
 # bar right
 # focus
-set -g window-status-current-format "#[fg=blue,bg=black]  #I:#W#{?window_last_flag,,}*"
+set -g window-status-current-format "#[fg=blue,bg=color233]  #I:#W#{?window_last_flag,,}*"
 # unfocused
-set -g window-status-format "#[fg=white,bg=black,nobold,noitalics,nounderscore]  #I:#W#{?window_last_flag,-,}"
+set -g window-status-format "#[fg=white,bg=color233,nobold,noitalics,nounderscore]  #I:#W#{?window_last_flag,-,}"
 
 # panes
-set -g pane-border-style "fg=black"
+set -g pane-border-style "fg=color233"
 set -g pane-active-border-style "fg=yellow"
 
 # Status bar background
 # set -g status-bg "#1a1b26"
-set -g status-bg black
+set -g status-bg color233
 
 # right most
 # set -g status-right "#[fg=white,bg=#24283B]  %Y-%m-%d #[]❬ %H:%M"
 set -g window-status-separator ""
-set -g status-right "#[fg=blue,bg=black] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=blue,bg=black]  \uf4a9 #H  #[fg=black,bg=blue]  #S  "
+set -g status-right "#[fg=blue,bg=color233] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=blue,bg=color233]  \uf4a9 #H  #[fg=color233,bg=blue]  #S  "
+
+# # --- light theme
+# # bar left
+# # Session name
+# set -g status-left '#[fg=black,bg=blue]#{?client_prefix,,  tmux  }#[fg=black,bg=yellow]#{?client_prefix,  tmux  ,}'
+#
+#
+# # bar right
+# # focus
+# set -g window-status-current-format "#[fg=blue,bg=gray]  #I:#W#{?window_last_flag,,}*"
+# # unfocused
+# set -g window-status-format "#[fg=black,bg=gray,nobold,noitalics,nounderscore]  #I:#W#{?window_last_flag,-,}"
+#
+# # panes
+# set -g pane-border-style "fg=gray"
+# set -g pane-active-border-style "fg=yellow"
+#
+# # Status bar background
+# # set -g status-bg "#1a1b26"
+# set -g status-bg gray
+#
+# # right most
+# # set -g status-right "#[fg=white,bg=#24283B]  %Y-%m-%d #[]❬ %H:%M"
+# set -g window-status-separator ""
+# set -g status-right "#[fg=blue,bg=gray] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=blue,bg=gray]  \uf4a9 #H  #[fg=black,bg=blue]  #S  "
