tmux+zsh: atredes-primeagen inspired

--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -1,21 +1,12 @@
 set -g default-terminal "alacritty"
 set -ag terminal-overrides ",$TERM:RGB"
 
-# tmux prefix
-set -g prefix C-Space
-set -g prefix2 None
-bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
 
 set -g mouse
 
 set -g history-limit 10000
 # nvim slow on switch i to n
 set -sg escape-time 10
-
 # vi copy/paste mode
 set-window-option -g mode-keys vi
 
@@ -28,6 +19,7 @@ set -g display-panes-colour blue
 set -g display-panes-time 1000
 
 set -g renumber-windows on
+set -g base-index 1
 set -g repeat-time 500
 # set -g set-titles off
 
@@ -44,8 +36,6 @@ set -g visual-bell off
 set -g visual-silence off
 set -g word-separators "!\"#$%&'()*+,-./:;<=>?@[\\]^`{|}~"
 
-# nord theme
-# run-shell "~/.config/tmux/themes/nord-tmux/nord.tmux"
 
 # -------------
 # Design Change
@@ -75,35 +65,35 @@ set -g pane-border-style "fg=color233"
 set -g pane-active-border-style "fg=yellow"
 
 # Status bar background
-# set -g status-bg "#1a1b26"
 set -g status-bg color233
 
 # right most
-# set -g status-right "#[fg=white,bg=#24283B]  %Y-%m-%d #[]❬ %H:%M"
 set -g window-status-separator ""
-set -g status-right "#[fg=blue,bg=color233] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=blue,bg=color233]  \uf4a9 #H  #[fg=color233,bg=blue]  #S  "
+# w/ git, host
+# set -g status-right "#[fg=blue,bg=color233] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=blue,bg=color233]  \uf4a9 #H  #[fg=color233,bg=blue]  #S  "
+set -g status-right "#[fg=blue,bg=color233] #[fg=color233,bg=blue]  #S  "
 
-# # --- light theme
-# # bar left
-# # Session name
-# set -g status-left '#[fg=black,bg=blue]#{?client_prefix,,  tmux  }#[fg=black,bg=yellow]#{?client_prefix,  tmux  ,}'
-#
-#
-# # bar right
-# # focus
-# set -g window-status-current-format "#[fg=blue,bg=gray]  #I:#W#{?window_last_flag,,}*"
-# # unfocused
-# set -g window-status-format "#[fg=black,bg=gray,nobold,noitalics,nounderscore]  #I:#W#{?window_last_flag,-,}"
-#
-# # panes
-# set -g pane-border-style "fg=gray"
-# set -g pane-active-border-style "fg=yellow"
-#
-# # Status bar background
-# # set -g status-bg "#1a1b26"
-# set -g status-bg gray
-#
-# # right most
-# # set -g status-right "#[fg=white,bg=#24283B]  %Y-%m-%d #[]❬ %H:%M"
-# set -g window-status-separator ""
-# set -g status-right "#[fg=blue,bg=gray] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=blue,bg=gray]  \uf4a9 #H  #[fg=black,bg=blue]  #S  "
+
+# --------
+# bindings
+# --------
+
+# tmux prefix
+set -g prefix C-Space
+set -g prefix2 None
+
+bind r source-file ~/.config/tmux/tmux.conf
+
+# vim-like pane switching
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+
+# forget the find window.  That is for chumps
+bind f run-shell "tmux neww ~/.local/script/tmux-sessionizer"
+
+bind i run-shell "tmux neww tmux-cht.sh"
+bind G new-window -n 'lazygit' lazygit
+# bind g run-shell "~/.local/script/open-in-github.sh"
