fix: lazygit tmux keybind

--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -92,8 +92,8 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 # forget the find window.  That is for chumps
-bind f run-shell "tmux neww ~/.local/script/tmux-sessionizer"
+bind -r f run-shell "tmux neww ~/.local/script/tmux-sessionizer"
 
 bind i run-shell "tmux neww tmux-cht.sh"
-bind G new-window -n 'lazygit' lazygit
+bind G neww -n git -c "#{pane_current_path}" lazygit
 # bind g run-shell "~/.local/script/open-in-github.sh"
