fix: tmux open in github

--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -95,5 +95,5 @@ bind -r l select-pane -R
 bind -r f run-shell "tmux neww ~/.local/script/tmux-sessionizer"
 
 bind i run-shell "tmux neww tmux-cht.sh"
-bind G neww -n git -c "#{pane_current_path}" lazygit
-# bind g run-shell "~/.local/script/open-in-github.sh"
+bind g neww -n git -c "#{pane_current_path}" lazygit
+bind G neww -n ghb -c "#{pane_current_path}" "gh browse"
