--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,11 +2,11 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "reload skhd",
-            "type": "shell",
-            "command": "skhd --reload",
-        }
-    ]
+    // "tasks": [
+    //     {
+    //         "label": "reload skhd",
+    //         "type": "shell",
+    //         "command": "skhd --reload",
+    //     }
+    // ]
 }
