tmux: lean config

--- a/osx/.config/tmux/tmux.conf
+++ b/osx/.config/tmux/tmux.conf
@@ -40,6 +40,8 @@ set -g word-separators "!\"#$%&'()*+,-./:;<=>?@[\\]^`{|}~"
 # -------------
 # Design Change
 # -------------
+set -g status-position top
+set -g status-justify centre
 
 # title
 set -g set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
@@ -47,32 +49,40 @@ set -g set-titles-string "#S:#I:#W - \"#T\" #{session_alerts}"
 set -g message-command-style bg=color233,fg=yellow
 set -g message-style bg=yellow,fg=color233
 
-# --- dark theme
-# bar left
-# Session name
-# set -g status-left "#[fg=color233,bg=cyan] #S #[fg=blue,bg=default,nobold,noitalics,nounderscore]"
-set -g status-left '#[fg=color233,bg=blue]#{?client_prefix,,  tmux  }#[fg=black,bg=yellow]#{?client_prefix,  tmux  ,}'
+set -g status-style bg=default
+set -g status-style fg=yellow
+# set -g status-left '#[fg=blue,bg=default]#{?client_prefix,, [#S] }#[fg=black,bg=yellow]#{?client_prefix, [#S] ,}'
+set -g status-left '#[fg=yellow,bg=default]#{?client_prefix,, [#S] }#[fg=black,bg=yellow]#{?client_prefix, [#S] ,}'
+set -g status-right '#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,} %H:%M'
 
-
-# bar right
-# focus
-set -g window-status-current-format "#[fg=blue,bg=color233]  #I:#W#{?window_last_flag,,}*"
-# unfocused
-set -g window-status-format "#[fg=white,bg=color233,nobold,noitalics,nounderscore]  #I:#W#{?window_last_flag,-,}"
-
-# panes
+# # panes
 set -g pane-border-style "fg=color233"
 set -g pane-active-border-style "fg=yellow"
 
-# Status bar background
-set -g status-bg color233
-
-# right most
-set -g window-status-separator ""
-# w/ git, host
-# set -g status-right "#[fg=blue,bg=color233] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=blue,bg=color233]  \uf4a9 #H  #[fg=color233,bg=blue]  #S  "
-set -g status-right "#[fg=blue,bg=color233] #[fg=color233,bg=blue]  #S  "
-
+# --- dark theme
+# # bar left
+# # Session name
+# # set -g status-left "#[fg=color233,bg=cyan] #S #[fg=blue,bg=default,nobold,noitalics,nounderscore]"
+# set -g status-left '#[fg=color233,bg=blue]#{?client_prefix,,  tmux  }#[fg=black,bg=yellow]#{?client_prefix,  tmux  ,}'
+#
+#
+# # bar right
+# # focus
+# set -g window-status-current-format "#[fg=blue,bg=color233]  #I:#W#{?window_last_flag,,}*"
+# # unfocused
+# set -g window-status-format "#[fg=white,bg=color233,nobold,noitalics,nounderscore]  #I:#W#{?window_last_flag,-,}"
+#
+# # panes
+# set -g pane-border-style "fg=color233"
+# set -g pane-active-border-style "fg=yellow"
+#
+# # Status bar background
+# set -g status-bg color233
+#
+# # right most
+# set -g window-status-separator ""
+# # w/ git, host
+# # set -g status-right "#[fg=blue,bg=color233] #{?#(cd #{pane_current_path}; git rev-parse --is-inside-work-tree),\ue0a0,} #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=blue,bg=color233]  \uf4a9 #H  #[fg=color233,bg=blue]  #S  "
 
 # --------
 # bindings
